--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 
 }
 .renfrew {font-family: 'renfrewregular', Arial, sans-serif; }
+.justify {text-align: justify;}
 .column p {
   color: #9cf;
   text-align: justify;
@@ -23,7 +24,8 @@ html {
 
 body {
   margin: 0;
-    background-image: url('../images/bgsky.jpg');
+    background-image: url('../images/back.svg');
+    background-size: 300px 300px;
     color: #fff;
 }
 
@@ -232,7 +234,7 @@ td,th {
 
 h1,h2,h3,h4,h5,h6 {
   font-weight: 300;
-  margin-top: 0;
+  margin-top: 1.5rem;
   margin-bottom: 1.5rem;
   color:#ffcc33
 }
