--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,11 @@
   text-indent: 20px;
 }
 p { line-height: 1.6em;}
-
+.card {
+  background-color: #223;
+  border-radius: 16px;
+  padding:16px;
+}
 html {
   font: .9em Tahoma, Verdana, Sans-Serif, Arial;
   -ms-text-size-adjust: 100%;
@@ -305,7 +309,6 @@ a:hover {
   white-space: nowrap;
   box-sizing: border-box;
 }
-
 .button:hover,button:hover,input[type="submit"]:hover,input[type="reset"]:hover,input[type="button"]:hover,.button:focus,button:focus,input[type="submit"]:focus,input[type="reset"]:focus,input[type="button"]:focus {
   border-color: #888;
   color: #333;
